--- a/test/test.html
+++ b/test/test.html
@@ -15,7 +15,10 @@
 
 		<!-- <script src="../bower_components/traceur/traceur.js"></script> -->
 		<script src="../bower_components/es6-module-loader/dist/es6-module-loader.js"></script>
-		<script src="../dist/system.js" data-traceur-src="../bower_components/traceur/traceur.js" data-main="test" type="text/javascript"></script>
+		<script src="../dist/system.js" data-traceur-src="../bower_components/traceur/traceur.js" type="text/javascript"></script>
+		<script>
+			System.import('test');
+		</script>
 
 		<script src="../bower_components/qunit/qunit/qunit.js"></script>
 	</body>
