Test loading amd-bundle

--- a/test/test-csp-production.html
+++ b/test/test-csp-production.html
@@ -39,6 +39,20 @@
         }, err);
       });
 
+      System.bundles['tests/amd-bundle'] = ['bundle-1', 'bundle-2'];
+      asyncTest('Loading an AMD bundle', function() {
+        System['import']('bundle-1').then(function(m) {
+          ok(m.defined == true);
+          start();
+        }, err);
+
+        stop();
+        System['import']('bundle-2').then(function(m) {
+          ok(m.defined == true);
+          start();
+        }, err);
+      });
+
       asyncTest('Loading an AMD named define', function() {
         System['import']('tests/nameddefine').then(function() {
           System['import']('another-define').then(function(m) {
