include separate register repo

--- a/test/test-register.html
+++ b/test/test-register.html
@@ -21,6 +21,8 @@
       register(System);
     </script>
 
+    <!-- <script src="https://cdn.rawgit.com/systemjs/register/master/es6-module-loader-register.js"></script> -->
+
     <script src="../bower_components/qunit/qunit/qunit.js"></script>
 
     <script>
