--- a/test/test-csp.html
+++ b/test/test-csp.html
@@ -15,7 +15,7 @@
 
     <!-- <script src="../bower_components/traceur/traceur.js"></script> -->
     <script src="../bower_components/es6-module-loader/dist/es6-module-loader.js"></script>
-    <script src="../dist/system-production-csp.js" type="text/javascript"></script>
+    <script src="../dist/system-csp.js" type="text/javascript"></script>
 
     <script src="../bower_components/qunit/qunit/qunit.js"></script>
 
