--- a/test/test.html
+++ b/test/test.html
@@ -15,7 +15,7 @@
 
 		<!-- <script src="../bower_components/traceur/traceur.js"></script> -->
 		<script src="../bower_components/es6-module-loader/dist/es6-module-loader.src.js"></script>
-		<script src="../dist/system.js" data-traceur-src="../bower_components/traceur/traceur.js" type="text/javascript"></script>
+		<script src="../dist/system.src.js" data-traceur-src="../bower_components/traceur/traceur.js" type="text/javascript"></script>
 		<script>
 			System['import']('test')['catch'](function(e) {
 				setTimeout(function() {
