Move System._extensions into core
This moves System._extensions into core and creates the pattern where
extensions push themselves into the array.

--- a/test/test-register.html
+++ b/test/test-register.html
@@ -18,6 +18,7 @@
     <script src="../lib/extension-register.js"></script>
     <script>
       // apply system.register extension (note normally we do this in closure to not have 'register' global)
+      System._extensions = [];
       register(System);
     </script>
 
