--- a/test/test-6to5.html
+++ b/test/test-6to5.html
@@ -15,9 +15,9 @@
 
 		<!-- <script src="../bower_components/traceur/traceur.js"></script> -->
 		<script src="../bower_components/es6-module-loader/dist/es6-module-loader.src.js"></script>
-		<script src="../dist/system.src.js" data-6to5-src="../node_modules/6to5/browser.js" type="text/javascript"></script>
+		<script src="../dist/system.src.js" data-6to5-src="../node_modules/6to5-core/browser.js" type="text/javascript"></script>
 		<script>
-			System.parser = '6to5';
+			System.transpiler = '6to5';
 			System['import']('test')['catch'](function(e) {
 				setTimeout(function() {
 					throw e;
