--- a/test/test-traceur.html
+++ b/test/test-traceur.html
@@ -15,7 +15,7 @@
 
 		<!-- <script src="../bower_components/traceur/traceur.js"></script> -->
 		<script src="../bower_components/es6-module-loader/dist/es6-module-loader.src.js"></script>
-		<script src="../dist/system.src.js" data-traceur-src="../node_modules/traceur/bin/traceur.js" type="text/javascript"></script>
+		<script src="../dist/system.src.js" type="text/javascript"></script>
 		<script>
 			System.traceurOptions = { asyncFunctions: true };
 			System['import']('test')['catch'](function(e) {
