--- a/test/test-babel-runtime.html
+++ b/test/test-babel-runtime.html
@@ -13,8 +13,7 @@
     <ol id="qunit-tests"></ol>
     <div id="qunit-test-area"></div>
 
-    <!-- <script src="../bower_components/traceur/traceur.js"></script> -->
-    <script src="../bower_components/es6-module-loader/dist/es6-module-loader.js"></script>
+    <script src="../node_modules/es6-module-loader/dist/es6-module-loader.js"></script>
     <script src="../dist/system.js" type="text/javascript"></script>
 
     <script src="../bower_components/qunit/qunit/qunit.js"></script>
@@ -32,7 +31,7 @@
       }
 
       System.transpiler = 'babel';
-      System.paths['babel-helpers'] = '../node_modules/babel-core/external-helpers.js';
+      System.paths['babel/external-helpers'] = '../node_modules/babel-core/external-helpers.js';
 
       asyncTest('Dynamicall loading modules with Traceur runtime', function() {
         System['import']('tests/with-runtime-babel').then(function(m) {
