--- a/test/test-tracer.html
+++ b/test/test-tracer.html
@@ -13,13 +13,14 @@
     <ol id="qunit-tests"></ol>
     <div id="qunit-test-area"></div>
 
-    <!-- <script src="../bower_components/traceur/traceur.js"></script> -->
-    <script src="../bower_components/es6-module-loader/dist/es6-module-loader.js"></script>
-    <script src="../dist/system.js" data-traceur-src="../bower_components/traceur/traceur.js" type="text/javascript"></script>
+    <script src="../node_modules/es6-module-loader/dist/es6-module-loader.js"></script>
+    <script src="../dist/system.js" type="text/javascript"></script>
 
     <script src="../bower_components/qunit/qunit/qunit.js"></script>
 
     <script>
+      System.paths['traceur'] = '../node_modules/traceur/bin/traceur.js';
+
       QUnit.config.testTimeout = 2000;
 
       QUnit.module("SystemJS Tracer");
