--- a/test/test-traceur.html
+++ b/test/test-traceur.html
@@ -17,6 +17,7 @@
 		<script src="../dist/system.src.js" type="text/javascript"></script>
 		<script>
 			System.traceurOptions = { asyncFunctions: true };
+			System.paths['traceur'] = '../node_modules/traceur/bin/traceur.js';
 			System['import']('test')['catch'](function(e) {
 				setTimeout(function() {
 					throw e.stack || e;
