--- a/test/test-tracer.html
+++ b/test/test-tracer.html
@@ -14,7 +14,7 @@
     <div id="qunit-test-area"></div>
 
     <script src="../node_modules/es6-module-loader/dist/es6-module-loader.js"></script>
-    <script src="../dist/system.js" type="text/javascript"></script>
+    <script src="../dist/system.src.js" type="text/javascript"></script>
 
     <script src="../bower_components/qunit/qunit/qunit.js"></script>
 
@@ -27,7 +27,7 @@
 
       function err(e) {
         setTimeout(function() {
-          throw e;
+          throw e.stack || e;
           start();
         });  
       }
