fix up all tests

--- a/test/test-csp.html
+++ b/test/test-csp.html
@@ -13,7 +13,7 @@
     <ol id="qunit-tests"></ol>
     <div id="qunit-test-area"></div>
 
-    <script src="../dist/system-prod.src.js" type="text/javascript"></script>
+    <script src="../dist/system-csp.src.js" type="text/javascript"></script>
     <script src="../bower_components/qunit/qunit/qunit.js"></script>
 
     <script>
