--- a/test/test-jsextensions.html
+++ b/test/test-jsextensions.html
@@ -74,6 +74,15 @@
 			  	start();
 			  })
 			});
+
+			asyncTest('Register extensions', function(err) {
+			  System['import']('tests/register-default-extension.js').then(function() {
+			    System['import']('custom.ext').then(function(m) {
+			      ok(m.custom == 'ext');
+			      start();
+			    }, err);
+			  }, err);
+			});
 		</script>
 	</body>
 </html>
