--- a/test/test-csp.html
+++ b/test/test-csp.html
@@ -179,6 +179,33 @@
         });
       })
       
+      asyncTest('Importing a script with wrong integrity fails', function() {
+        System.config({
+          meta: {
+            'tests/csp/integrity.js': {
+              integrity: 'sha256-abc'
+            }
+          }
+        });
+        System['import']('tests/csp/integrity.js').then(err, function(e) {
+          ok(typeof e !== 'undefined');
+          start();
+        });
+      });
+
+      asyncTest('Importing a script with correct integrity', function() {
+        System.config({
+          meta: {
+            'tests/csp/integrity.js': {
+              integrity: 'sha256-Mqlafeai37CqaOaqrc3_vWRwh7iQLyXxu-UyjtI_BGk='
+            }
+          }
+        });
+        System['import']('tests/csp/integrity.js').then(function(m) {
+          ok(m.integrity === 'integrity');
+          start();
+        });
+      });
     </script>
   </body>
 </html>
