fix defaultJSExtensions test for basePath

--- a/test/test-jsextensions.html
+++ b/test/test-jsextensions.html
@@ -44,6 +44,7 @@
 			  	},
 			  	packages: {
 			  		'tests/testpkg': {
+			  			basePath: 'lib',
 			  			defaultExtension: 'ts',
 			  			map: {
 			  				'./asdf': './test.ts'
