--- a/test/test-csp.html
+++ b/test/test-csp.html
@@ -29,7 +29,7 @@
       }
 
       asyncTest('System version', function() {
-        ok(System.version.match(/^\d+\.\d+\.\d+ CSP$/));
+        ok(System.version.match(/^\d+\.\d+\.\d+(-\w+)? CSP$/));
         start();
       });
 
@@ -210,6 +210,13 @@
           ok(m.integrity === 'integrity');
           start();
         }, err);
+      });
+
+      asyncTest('Importing jQuery from CDN', function() {
+        System['import']('https://code.jquery.com/jquery-1.11.3.min.js').then(function($) {
+          ok($.fn);
+          start();
+        });
       });
     </script>
   </body>
