remove auto scriptLoad for amd

--- a/test/test-traceur.html
+++ b/test/test-traceur.html
@@ -24,8 +24,7 @@
 			meta: {
 				'traceur': {
 					format: 'global',
-					exports: 'traceur',
-					scriptLoad: false
+					exports: 'traceur'
 				}
 			},
 			transpiler: 'plugin-traceur'
