ensure trailing slash is added to baseURL

--- a/test/test-jspm.html
+++ b/test/test-jspm.html
@@ -2,7 +2,7 @@
 <script src="../dist/system.src.js"></script>
 <script>
   System.config({
-    baseURL: 'https://registry.jspm.io/',
+    baseURL: 'https://registry.jspm.io',
     paths: {
       'npm:': 'https://npm.jspm.io/',
       'github:': 'https://github.jspm.io/'
