typescript shim pending frankwallis/plugin-typescript#185

--- a/test/test-typescript.html
+++ b/test/test-typescript.html
@@ -14,7 +14,7 @@
 				"ts": {
 					"main": "plugin.js"
 				},
-				"typescript": {
+				"actual-typescript": {
 					"main": "lib/typescript.js",
 					"meta": {
 						"lib/typescript.js": {
@@ -25,7 +25,8 @@
 			},
 			map: {
 				"ts": "../node_modules/plugin-typescript/lib",
-				"typescript": "../node_modules/typescript"
+				"actual-typescript": "../node_modules/typescript",
+				"typescript": "./typescript-shim.js"
 			},
 			transpiler: 'ts'
 		});
