named register extra

--- a/test/test.html
+++ b/test/test.html
@@ -33,7 +33,7 @@
 			}
 		};
 
-		const extras = ['amd', 'named-exports', 'translate'];
+		const extras = ['amd', 'named-exports', 'transform', 'named-register'];
 		function runNextExtra () {
 			mocha.suite.suites.shift();
 			const extra = extras.shift();
