Adding Node.js support (https://github.com/systemjs/systemjs/issues/1873). While not complete, this supports the "system" format, "json" files, and builtin modules. It can resolve bare specifiers using import maps and the node_modules search algorithm. So far, it passes all the relevant tests that exist for the browser-specific version. Tests that are specific to Node.js use cases have not been added here yet.

--- a/test/test.html
+++ b/test/test.html
@@ -21,14 +21,14 @@
 		self.baseURL = location.href.substr(0, location.href.lastIndexOf('/') + 1);
 		self.rootURL = location.href.substr(0, location.href.substr(0, location.href.lastIndexOf('/')).lastIndexOf('/') + 1);
 		self.assert = {
-			ok: function (val) {
-				this.equal(!!val, true);
+			ok: function ok(val) {
+				self.assert.equal(!!val, true);
 			},
 			equal: function equal(a, b) {
 				if (a !== b)
 					throw new Error('Expected "' + a + '" to be "' + b + '"');
 			},
-			fail: function (msg) {
+			fail: function fail(msg) {
 				throw new Error(msg);
 			}
 		};
