Removed Node-specific code since that isn't relevant for this feature right now. Got 'source-map-support' working better for chrome, but its not perfect.

--- a/test/test.html
+++ b/test/test.html
@@ -14,7 +14,9 @@
 
 	<script type="systemjs-importmap" src="fixtures/browser/importmap.json"></script>
 	<script src="../dist/system.js"></script>
+
   <script src="../dist/utils/babel.js"></script>
+  <script src="../dist/utils/SourceMapSupport.js"></script>
 
 	<script>
 		mocha.setup('tdd');
