Making sure that the node-specific code is more cleanly incorporated into the existing code.
common.js
 - Updated `getGlobal` with a solution that will also use `window`, making it slightly more robust.
 - Updated the exported `URL` symbol to use `envGlobal` instead of `global`.

system-core.js
 - Changed the base constructor function to accept an object with a 'baseUrl' key and initializes a read-only property 'baseUrl'. This maintains compatibility in the browser by using `DEFAULT_BASEURL` when loaded as a script.

system-node.js
 - Instead of exporting a separate `NodeLoader` class, it now imports all the needed feature modules, just like 'src/system.js'.

features/basic-resolve.js
 - Now using the loader instance's 'baseUrl' property instead of a global value for its default value.

features/import-map.js
 - Is full cross-platform, and is tested in both the browser and node. Can get rid of 'features/node-import-map.js'.

features/node-load.js
 - Rewritten to simply add its own 'instantiate' implementation to the SystemJS prototype, just as other modules do.

extras/named-register.js
 - Used the `global` symbol from "common" to get the `System` reference.
 - Changed its constructor/prototype manipulation to look like that for 'features/import-map.js'

Tests
 - Created separate script to test node-specific features in the 'test/node/' folder. This should be very similar to tests in the 'test/browser/' folder.
 - 'npm test' now runs core & node tests.
 - Removed 'test/system-core-node.js' since it was redundant. The 'test/system-core.js' module covers both environments.

Rollup
 - Added 'watch' config to all the config objects
 - For node-specific bundle, make sure that none of the dependencies are bundled along with it. This will have to be sorted out, though, since this needs to be a no-dependency library.

--- a/test/test.html
+++ b/test/test.html
@@ -33,6 +33,8 @@
 			}
 		};
 
+		window.System = new System.constructor({ baseUrl: baseURL });
+
 		const extras = ['amd', 'named-exports', 'transform', 'named-register'];
 		function runNextExtra () {
 			mocha.suite.suites.shift();
