amd, test fixup

--- a/test/test.html
+++ b/test/test.html
@@ -8,6 +8,11 @@
 		if (typeof fetch === 'undefined')
 			document.write('<script src="../node_modules/whatwg-fetch/fetch.js"><\/script>');
 	</script>
+	<script>
+		// TODO IE11 URL polyfill testing
+		// if (typeof URL === 'undefined')
+		//	document.write()
+	</script>
 
 	<link rel="stylesheet" type="text/css" href="../node_modules/mocha/mocha.css"/>
 	<script src="../node_modules/mocha/mocha.js"></script>
