Implement loading of CSS Modules. Resolves #1991.

--- a/test/test.html
+++ b/test/test.html
@@ -8,6 +8,7 @@
 		if (typeof fetch === 'undefined')
 			document.write('<script src="../node_modules/whatwg-fetch/fetch.js"><\/script>');
 	</script>
+	<script src="../node_modules/construct-style-sheets-polyfill/adoptedStyleSheets.js"></script>
 	<script>
 		// TODO IE11 URL polyfill testing
 		// if (typeof URL === 'undefined')
