Implement module reload extra

--- a/test/test.html
+++ b/test/test.html
@@ -41,7 +41,7 @@
 			}
 		};
 
-		const extras = ['amd', 'named-exports', 'transform', 'named-register'];
+		const extras = ['reload', 'amd', 'named-exports', 'transform', 'named-register'];
 		let failCnt = 0;
 		function runNextExtra (failures) {
 			failCnt += failures;
