--- a/test/test.html
+++ b/test/test.html
@@ -20,6 +20,8 @@
 
 	<script type="systemjs-importmap" src="fixtures/browser/importmap.json"></script>
 	<script src="../dist/system.js"></script>
+	<script type="systemjs-module" src="/test/fixtures/browser/systemjs-module-script.js"></script>
+	<script type="systemjs-module" src="import:/test/fixtures/browser/systemjs-module-script2.js"></script>
 
 	<script>
 		mocha.setup('tdd');
