Patching prepareImport before loading script modules. Resolves #2024.

--- a/test/test.html
+++ b/test/test.html
@@ -19,6 +19,7 @@
 	<script src="../node_modules/mocha/mocha.js"></script>
 
 	<script type="systemjs-importmap" src="fixtures/browser/importmap.json"></script>
+	<script type="systemjs-module" src="/test/fixtures/browser/systemjs-module-early.js"></script>
 	<script src="../dist/system.js"></script>
 	<script type="systemjs-module" src="/test/fixtures/browser/systemjs-module-script.js"></script>
 	<script type="systemjs-module" src="import:/test/fixtures/browser/systemjs-module-script2.js"></script>
