--- a/test/test.html
+++ b/test/test.html
@@ -50,7 +50,7 @@
 			}
 		};
 
-		const extras = ['amd', 'named-exports', 'transform', 'named-register'];
+		const extras = ['amd', 'named-exports', 'esm', 'transform', 'named-register'];
 		let failCnt = 0;
 		function runNextExtra (failures) {
 			failCnt += failures;
