Report a test failure when an import or mocha error occurs

--- a/test/test.html
+++ b/test/test.html
@@ -77,6 +77,10 @@
 			mocha.run(function(failures) {
 				fetch(failures ? '/error' : '/done');
 			})
+		})
+		.catch(function(e) {
+			fetch('/error');
+			throw e;
 		});
 	</script>
 
