Added support for reloading import maps
… which works by passing a flag to `prepareImport` and either adding new script elements or marking existing ones as unparsed

--- a/test/test.html
+++ b/test/test.html
@@ -75,9 +75,20 @@
 			'./browser/named-register.js'
 		)
 		.then(function() {
-			mocha.run(function(failures) {
-				fetch(failures ? '/error' : '/done');
-			})
+			mocha
+				.rootHooks({
+					// @todo we need an "after each suite": https://github.com/mochajs/mocha/issues/4039
+					afterEach: function() {
+						var c = System.constructor.prototype;
+						var importMapElements = document.querySelectorAll(c.IMPORT_MAP_SELECTOR);
+						for (var i=0; i<importMapElements.length; i++) {
+							importMapElements[i][c.IMPORT_MAP_PARSED] = false;
+						}
+					}
+				})
+				.run(function(failures) {
+					fetch(failures ? '/error' : '/done');
+				});
 		})
 		.catch(function(e) {
 			fetch('/error');
