--- a/test/test.html
+++ b/test/test.html
@@ -72,7 +72,8 @@
 			'./browser/amd.js',
 			'./browser/named-exports.js',
 			'./browser/transform.js',
-			'./browser/named-register.js'
+			'./browser/named-register.js',
+			'./browser/dynamic-import-maps.js'
 		)
 		.then(function() {
 			mocha
