auto import and core refactoring

--- a/test/test.html
+++ b/test/test.html
@@ -30,6 +30,7 @@
 	<script type="systemjs-module" src="/test/fixtures/browser/systemjs-module-early.js"></script>
 	<script src="../dist/system.js"></script>
 	<script type="systemjs-module" src="/test/fixtures/browser/systemjs-module-script.js"></script>
+	<script src="/test/fixtures/browser/auto-import.js"></script>
 	<script type="systemjs-module" src="import:/test/fixtures/browser/systemjs-module-script2.js"></script>
 
 	<script>
