revert test.html changes

--- a/test/test.html
+++ b/test/test.html
@@ -72,24 +72,12 @@
 			'./browser/amd.js',
 			'./browser/named-exports.js',
 			'./browser/transform.js',
-			'./browser/named-register.js',
-			'./browser/dynamic-import-maps.js'
+			'./browser/named-register.js'
 		)
 		.then(function() {
-			mocha
-				.rootHooks({
-					// @todo we need an "after each suite": https://github.com/mochajs/mocha/issues/4039
-					afterEach: function() {
-						var c = System.constructor.prototype;
-						var importMapElements = document.querySelectorAll(c.IMPORT_MAP_SELECTOR);
-						for (var i=0; i<importMapElements.length; i++) {
-							importMapElements[i][c.IMPORT_MAP_PARSED] = false;
-						}
-					}
-				})
-				.run(function(failures) {
-					fetch(failures ? '/error' : '/done');
-				});
+			mocha.run(function(failures) {
+				fetch(failures ? '/error' : '/done');
+			})
 		})
 		.catch(function(e) {
 			fetch('/error');
