--- a/test/test.html
+++ b/test/test.html
@@ -28,8 +28,8 @@
 
 	<script type="systemjs-importmap" src="https://hostname.invalid/importmap.json"></script>
 	<script type="systemjs-importmap" src="fixtures/browser/importmap-invalid.json"></script>
-	<script type="systemjs-importmap" src="fixtures/browser/importmap-invalid.json" onerror="retryImportMap()"></script>
-	<script type="systemjs-importmap" src="fixtures/browser/importmap-invalid.json" onerror="callbackDNE()"></script>
+	<script type="systemjs-importmap" onerror="retryImportMap()" src="fixtures/browser/importmap-invalid.json"></script>
+	<script type="systemjs-importmap" onerror="callbackDNE()" src="fixtures/browser/importmap-invalid.json"></script>
 	<script type="text/javascript">
 		function retryImportMap() {
 			document.write('<scr'+'ipt type="systemjs-importmap" src="fixtures/browser/importmap-invalid.json"></sc'+'ript>');
